[package]
name = "eris"
version = "0.2.0"
authors = ["Andreas Ots <qrpth@qrpth.eu>"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"
build = "build.rs"

[build-dependencies]
lalrpop = { version = "0.21.0", default-features = false, features = ["lexer", "unicode"] }

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = ["std"] }
bytes = { version = "1.7.1", default-features = false }
caseless = "0.2.1"
chrono = { version = "0.4.38", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.5.16", default-features = false, features = ["std"] }
futures-util = { version = "0.3.30", default-features = false, features = ["std", "sink"] }
google-calendar3 = "5.0.5"
google-sheets4 = "5.0.5"
google-youtube3 = "5.0.5"
influxdb = { version = "0.7.2", default-features = false, features = ["derive", "reqwest-client-rustls"] }
iso8601 = "0.6.1"
lalrpop-util = { version = "0.21.0", features = ["std", "lexer", "unicode"], default-features = false }
levenshtein = "1.0.5"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
regex = { version = "1.10.6", default-features = false, features = ["perf", "std", "unicode"] }
reqwest = { version = "0.11.27", default-features = false, features = ["rustls-tls", "json"] }
rust-ini = { version = "0.21.1", default-features = false }
sea-orm = { version = "1.0.1", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
separator = { version = "0.4.1", default-features = false }
serde = { version = "1.0.209", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.127", default-features = false }
strfmt = { version = "0.2.4", default-features = false }
tokio = { version = "1.40.0", default-features = false, features = ["net", "fs", "io-util", "rt-multi-thread", "macros", "time", "signal", "tracing"] }
tokio-util = { version = "0.7.12", default-features = false, features = ["codec"] }
tower = { version = "0.5.0", default-features = false, features = ["reconnect"] }
tracing = { version = "0.1.40", default-features = false, features = ["std", "attributes", "max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "std", "chrono", "env-filter", "json", "tracing-log"] }
twilight-cache-inmemory = { version = "0.16.0-rc.1", default-features = false, features = ["permission-calculator"] }
twilight-gateway = { version = "0.16.0-rc.1", default-features = false, features = ["rustls-native-roots", "zlib-stock", "twilight-http"] }
twilight-http = { version = "0.16.0-rc.1", default-features = false, features = ["decompression", "rustls-native-roots"] }
twilight-mention = "0.16.0-rc.1"
twilight-model = "0.16.0-rc.1"
twilight-util = { version = "0.16.0-rc.1", default-features = false, features = ["builder", "snowflake"] }
twilight-validate = "0.16.0-rc.1"
twitch_api = { version = "0.7.0-rc.7", features = ["all", "reqwest"] }
unicode-segmentation = "1.11.0"
unicode-width = { version = "0.1.13", default-features = false }
url = { version = "2.5.2", default-features = false, features = ["serde"] }

[target.'cfg(unix)'.dependencies]
walkdir = "2.5.0"
tzfile = "0.1.3"

[target.'cfg(not(unix))'.dependencies]
chrono-tz = { version = "0.9.0", features = ["case-insensitive"] }
