[package]
name = "eris"
version = "0.2.0"
authors = ["Andreas Ots <qrpth@qrpth.eu>"]
license = "Apache-2.0"
readme = "README.md"
edition = "2024"
build = "build.rs"

[build-dependencies]
lalrpop = { version = "0.22.2", default-features = false, features = ["lexer", "unicode"] }

[dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
atrium-api = { version = "0.25.7", default-features = false, features = ["namespace-appbsky"] }
atrium-xrpc-client = { version = "0.5.15", default-features = false, features = ["reqwest"] }
bytes = { version = "1.11.0", default-features = false }
caseless = "0.2.2"
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.5.54", default-features = false, features = ["std"] }
futures-util = { version = "0.3.31", default-features = false, features = ["std", "sink"] }
google-calendar3 = { version = "7.0.0", features = ["yup-oauth2-service-account"] }
google-sheets4 = { version = "7.0.0", features = ["yup-oauth2-service-account"] }
google-youtube3 = { version = "7.0.0", features = ["yup-oauth2-service-account"] }
html5ever = "0.36.1"
influxdb-line-protocol = "2.0.0"
iso8601 = "0.6.3"
lalrpop-util = { version = "0.22.2", features = ["std", "lexer", "unicode"], default-features = false }
levenshtein = "1.0.5"
rand = { version = "0.9.2", default-features = false, features = ["std", "std_rng", "thread_rng"] }
regex = { version = "1.12.2", default-features = false, features = ["perf", "std", "unicode"] }
reqwest = { version = "0.12.28", default-features = false, features = ["rustls-tls", "json"] }
rust-ini = { version = "0.21.3", default-features = false }
sea-orm = { version = "1.1.19", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
separator = { version = "0.4.1", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false }
strfmt = { version = "0.2.5", default-features = false }
tokio = { version = "1.49.0", default-features = false, features = ["net", "fs", "io-util", "rt-multi-thread", "macros", "time", "signal", "tracing"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["codec"] }
tower = { version = "0.5.3", default-features = false, features = ["reconnect"] }
tracing = { version = "0.1.44", default-features = false, features = ["std", "attributes", "max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["fmt", "std", "chrono", "env-filter", "json", "tracing-log"] }
twilight-cache-inmemory = { version = "0.17.1", default-features = false, features = ["permission-calculator"] }
twilight-gateway = { version = "0.17.1", default-features = false, features = ["rustls-native-roots", "zlib", "twilight-http"] }
twilight-http = { version = "0.17.1", default-features = false, features = ["decompression", "rustls-native-roots"] }
twilight-mention = "0.17.0"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", default-features = false, features = ["builder", "snowflake"] }
twilight-validate = "0.17.0"
twitch_api = { version = "0.7.2", features = ["all", "reqwest"] }
unicode-segmentation = "1.12.0"
unicode-width = { version = "0.2.2", default-features = false }
url = { version = "2.5.7", default-features = false, features = ["serde"] }

[target.'cfg(unix)'.dependencies]
walkdir = "2.5.0"
tzfile = "0.1.3"

[target.'cfg(not(unix))'.dependencies]
chrono-tz = { version = "0.10.4", features = ["case-insensitive"] }
