[package]
name = "eris"
version = "0.2.0"
authors = ["Andreas Ots <qrpth@qrpth.eu>"]
license = "Apache-2.0"
readme = "README.md"
edition = "2024"
build = "build.rs"

[features]
default = ["ocr"]
ocr = ["dep:deadpool", "dep:image", "dep:tesseract-sys", "dep:reqwest"]

[build-dependencies]
lalrpop = { version = "0.23.1", default-features = false, features = ["lexer", "unicode"] }
reqwest = { version = "0.13.4", features = ["blocking"], optional = true }

[dependencies]
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
atrium-api = { version = "0.25.8", default-features = false, features = ["namespace-appbsky"] }
bytes = { version = "1.11.1", default-features = false }
caseless = "0.2.2"
chrono = { version = "0.4.45", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.6.1", default-features = false, features = ["std"] }
deadpool = { version = "0.13.0", features = ["managed", "rt_tokio_1"], default-features = false, optional = true }
futures-util = { version = "0.3.32", default-features = false, features = ["std", "sink"] }
google-calendar3 = { version = "7.0.0", features = ["yup-oauth2-service-account"] }
google-sheets4 = { version = "7.0.0", features = ["yup-oauth2-service-account"] }
google-youtube3 = { version = "7.0.0", features = ["yup-oauth2-service-account"] }
html5ever = "0.39.0"
image = { version = "0.25.10", optional = true }
influxdb-line-protocol = "2.0.0"
iso8601 = "0.6.3"
lalrpop-util = { version = "0.23.1", features = ["std", "lexer", "unicode"], default-features = false }
levenshtein = "1.0.5"
rand = { version = "0.10.1", default-features = false, features = ["std", "std_rng", "thread_rng"] }
regex = { version = "1.12.3", default-features = false, features = ["perf", "std", "unicode"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider", "json", "query"] }
rust-ini = { version = "0.21.3", default-features = false }
rustls = { version = "0.23.40", default-features = false, features = ["aws-lc-rs"] }
sea-orm = { version = "1.1.20", default-features = false, features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
separator = { version = "0.4.1", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.150", default-features = false }
strfmt = { version = "0.2.5", default-features = false }
tesseract-sys = { version = "0.6.3", optional = true }
tokio = { version = "1.52.3", default-features = false, features = ["net", "fs", "io-util", "rt-multi-thread", "macros", "time", "signal", "tracing"] }
tokio-util = { version = "0.7.18", default-features = false, features = ["codec"] }
tower = { version = "0.5.3", default-features = false, features = ["reconnect"] }
tracing = { version = "0.1.44", default-features = false, features = ["std", "attributes", "max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["fmt", "std", "chrono", "env-filter", "json", "tracing-log"] }
twilight-cache-inmemory = { version = "0.17.1", default-features = false, features = ["permission-calculator"] }
twilight-gateway = { version = "0.17.1", default-features = false, features = ["rustls-native-roots", "zlib", "twilight-http"] }
twilight-http = { version = "0.17.1", default-features = false, features = ["decompression", "rustls-native-roots"] }
twilight-mention = "0.17.0"
twilight-model = "0.17.1"
twilight-util = { version = "0.17.0", default-features = false, features = ["builder", "snowflake"] }
twilight-validate = "0.17.0"
twitch_api = { version = "0.8.0", features = ["all", "reqwest"] }
unicode-segmentation = "1.13.3"
unicode-width = { version = "0.2.2", default-features = false }
url = { version = "2.5.8", default-features = false, features = ["serde"] }

[target.'cfg(unix)'.dependencies]
walkdir = "2.5.0"
tzfile = "0.1.3"

[target.'cfg(not(unix))'.dependencies]
chrono-tz = { version = "0.10.4", features = ["case-insensitive"] }
