[package]
name = "eris-macros"
version = "0.1.0"
authors = ["Andreas Ots <qrpth@qrpth.eu>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.2", default-features = false }
syn = { version = "1.0.5", default-features = false }
proc-macro2 = { version = "1.0.1", default-features = false }
