[package]
name = "eris-macros"
version = "0.1.0"
authors = ["Andreas Ots <qrpth@qrpth.eu>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.20", default-features = false }
syn = { version = "1.0.98", default-features = false }
proc-macro2 = { version = "1.0.40", default-features = false }
